--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -23,17 +23,21 @@ body {
   width: 100vw;
 }
 
-.navbar-logo {
-  color: rgb(53, 49, 49);
-  text-shadow: 0px 0px 0px rgb(198, 196, 196);
-  justify-self: center;
+.icon-container {
   margin-left: 0px;
   cursor: pointer;
-  text-decoration: none;
-  font-size: 1.7rem;
+
   display: flex;
   align-items: center;
-  font-weight: 300;
+  justify-content: center;
+
+  padding: 1rem 1rem 0rem 0rem;
+  height: 100%;
+}
+
+#icon {
+  height: 40px;
+  width: auto;
 }
 
 .fa-typo3 {
@@ -43,7 +47,7 @@ body {
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(6, auto);
+  grid-template-columns: repeat(7, auto);
   grid-gap: 5px;
   list-style: none;
   text-align: center;
