--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,13 +2,15 @@ body {
   padding: 0px;
 }
 
+#nav-item-1 {
+  margin-right: 20px;
+}
 .navbar {
   background: white;
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -71,7 +73,7 @@ body {
   padding-top: 1rem;
   padding-bottom: 0rem;
   height: 100%;
-  font-family: Cormorant;
+  font-family: "Cormorant", serif;
   font-weight: 300;
 }
 
