--- a/src/components/NewItems.css
+++ b/src/components/NewItems.css
@@ -11,15 +11,17 @@
 }
 
 .new-item {
-  text-align: left !important;
+  font-size: 18px !important;
 }
 .new-description {
   display: block;
   font-family: Cormorant;
   font-weight: 300;
   font-size: 17px;
-  max-width: 230px;
+  max-width: 350px;
   word-wrap: wrap;
+  text-align: left !important;
+  margin: 5px 5px 5px 5px !important;
 }
 
 .newitems-container {
@@ -34,7 +36,7 @@
 
 .new-description-box {
   background-color: white;
-  padding: 2px 8px 8px 8px;
+  padding: 6px 8px 8px 8px;
   box-shadow: 0 0 5px rgb(75, 75, 75, 0.7);
   /* border: 2px solid rgb(198, 187, 198); */
   border-top: 0px;
@@ -79,10 +81,6 @@
 }
 
 @media screen and (max-width: 960px) {
-  p {
-    max-width: 250px;
-  }
-
   .border {
     padding: 20px;
   }
