--- a/src/components/SameDayReadings.css
+++ b/src/components/SameDayReadings.css
@@ -34,19 +34,21 @@ p {
 
 .sameday-title {
   font-family: "Great Vibes", cursive;
+
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 5px;
 
   color: rgb(255, 255, 255);
   /* text-shadow: 1px 1px 1px #67636b, 2px 2px 1px #67636b, 3px 3px 1px #67636b,
-    4px 4px 1px #67636b, 0px 0px 40px rgb(52, 52, 56); */
+      4px 4px 1px #67636b, 0px 0px 40px rgb(52, 52, 56); */
 
   /* text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191,
-    1px 4px 1px #919191, 1px 5px 1px #919191, 1px 6px 1px #919191,
-    1px 1px 35px rgba(16, 16, 16, 0.5); */
+      1px 4px 1px #919191, 1px 5px 1px #919191, 1px 6px 1px #919191,
+      1px 1px 35px rgba(16, 16, 16, 0.5); */
   letter-spacing: 0.01rem;
   text-align: center;
+  margin-top: 40px;
 }
 
 .delivery-time {
@@ -67,28 +69,16 @@ p {
   color: rgb(85, 85, 85);
 }
 
-.other-title {
-  color: #383838;
-  font-family: "Great Vibes", cursive;
-
-  text-decoration: underline;
-  text-decoration-thickness: 2px;
-  text-underline-offset: 5px;
-  text-align: center;
-  margin-bottom: 0px !important;
-  margin-top: 100px;
-}
-
-/* .description-box {
+.description-box {
   background-color: white;
   padding: 5px 4px 4px 4px;
-  border: 2px solid rgb(198, 187, 198);
+  /* border: 2px solid rgb(198, 187, 198); */
   border-top: 0px;
   margin-top: -3px;
   max-width: 235px;
   min-width: 235px;
   margin-bottom: -50px;
-} */
+}
 
 .thumbnail-container {
   justify-self: flex-start;
