--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,7 +6,6 @@
 }
 
 .data-container {
-  display: flex;
   padding: 60px 20px 20px 20px;
 }
 
@@ -19,7 +18,7 @@
 
 .sales-container {
   height: 100%;
-  width: 55%;
+  width: 100%;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -42,7 +41,7 @@
 
   border-radius: 80px;
   margin-bottom: 0px;
-  margin-top: 135px;
+  margin-top: 150px;
 
   padding: 40px 70px 50px 70px;
   z-index: 1;
@@ -65,10 +64,47 @@
 }
 .card-video {
   height: 350px;
-  width: 50%;
+  max-width: 60vw;
+  width: 90%;
   background-color: rgb(215, 215, 228);
   text-align: center;
   align-items: center;
   justify-content: center;
   display: flex;
+  object-fit: cover;
+  box-shadow: 0 0 20px rgba(138, 121, 162, 0.8);
+  opacity: 0.93;
+}
+
+@media only screen and (max-width: 600px) {
+  /* Font size adjustment for small screens */
+  .data-heading {
+    padding: 30px 20px 40px 20px;
+    margin-top: 100px;
+    font-size: 28px;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 899px) {
+  /* Tablet-specific styles */
+  .data-heading {
+    padding: 40px 50px 50px 50px;
+    font-size: 35px;
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1399px) {
+  /* Desktop-specific styles */
+  .data-heading {
+    padding: 40px 70px 50px 70px;
+    font-size: 35px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .data-heading {
+    padding: 40px 70px 50px 70px;
+
+    font-size: 40px;
+  }
 }
