--- a/src/pages/OracleDecks.css
+++ b/src/pages/OracleDecks.css
@@ -1,9 +1,3 @@
-h2 {
-  font-weight: 400;
-  font-family: Cormorant;
-  font-size: 40px;
-}
-
 p {
   margin-bottom: 0px;
 }
@@ -17,25 +11,16 @@ p {
   text-shadow: 1px 1px 2px white;
 }
 
-#h2-2 {
-  margin-top: 60px;
-  margin-bottom: 30px;
-}
+.oracle-title {
+  color: #383838;
+  font-family: "Great Vibes", cursive;
 
-.description-box {
-  background-color: white;
-  padding: 2px 8px 8px 8px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
-  /* border: 2px solid rgb(198, 187, 198); */
-  border-top: 0px;
-  margin-top: -3px;
-  max-width: 235px;
-  height: auto;
-
-  transform: scaleY(0); /* Start with a vertical scale of 0 */
-  transform-origin: top; /* Set the transform origin to the top */
-  transition: opacity 0.3s ease, transform 0.3s ease; /* Adjust the duration as needed */
-  position: absolute;
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 5px;
+  text-align: center;
+  margin-bottom: 0px;
+  margin-top: 40px;
 }
 
 .thumbnail-container3 > div:hover,
@@ -81,4 +66,40 @@ p {
   font-size: 100px;
   word-wrap: nowrap;
   border-radius: 5px;
+}
+.explanation-container {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+
+  margin: auto;
+  max-width: 53vw;
+}
+
+.explanation {
+  background-color: rgb(242, 239, 238);
+
+  text-align: center;
+
+  border-radius: 80px;
+  margin-bottom: 10px;
+  margin-top: 55px;
+
+  padding: 20px 40px 30px 40px;
+  z-index: 10;
+}
+
+.explanation-font {
+  color: rgb(72, 67, 65);
+  font-size: 25px;
+  font-family: "Cormorant", "serif";
+  font-weight: 400;
+}
+
+.question {
+  color: rgb(72, 67, 65);
+  font-family: "Cormorant SC", "serif";
+  font-weight: 700;
+  font-size: 35px;
+  margin-bottom: 2px;
 }
