--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ h2 {
 
 .page-title {
   margin-bottom: 0px;
-  margin-top: 15çpx;
+  margin-top: 15px;
   align-items: left;
   text-align: center;
 
