--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -140,8 +140,9 @@
 @media only screen and (max-width: 600px) {
   /* Insert mobile-specific styles here */
   .cloud-container {
-    width: auto;
     justify-content: center;
+    margin-top: 0px;
+    width: auto;
   }
   #cloud {
     margin-left: -35vw;
