--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -62,7 +62,7 @@
   font-family: "Cormorant";
   color: rgb(70, 70, 73);
 }
-.card-video {
+.card-image {
   height: 350px;
   max-width: 60vw;
   width: 90%;
@@ -82,6 +82,14 @@
     padding: 30px 20px 40px 20px;
     margin-top: 100px;
     font-size: 28px;
+  }
+  .data-container {
+    padding: 60px 10px 20px 10px;
+  }
+
+  .card-image {
+    max-width: auto;
+    height: 150px;
   }
 }
 
