--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -139,16 +139,39 @@
 
 @media only screen and (max-width: 600px) {
   /* Insert mobile-specific styles here */
+  #contact-page {
+    padding: 10px 40px 40px 40px;
+  }
+  .contact-container {
+    gap: 280px 70px;
+    padding: 10px;
+  }
+
+  .ul-title {
+    font-size: 35px;
+    margin-left: -26vw;
+  }
   .cloud-container {
     justify-content: center;
     margin-top: 0px;
     width: auto;
   }
+  .contact-container2 {
+    margin-left: -27vw;
+    display: grid;
+    justify-content: center;
+    gap: 10px;
+    height: 3rem;
+    grid-template-columns: 3rem 3rem 3rem;
+  }
   #cloud {
-    margin-left: -35vw;
+    margin-left: -40vw;
+    min-width: 300px;
+    max-width: 300px;
+    height: 230px;
   }
   .contact-list {
-    margin-top: 100px;
+    margin-top: 65px;
     margin-left: 0px;
     max-width: 30vw;
   }
