--- a/src/pages/FAQ.css
+++ b/src/pages/FAQ.css
@@ -16,6 +16,12 @@
 
 @media only screen and (max-width: 600px) {
   /* Font size adjustment for small screens */
+  .Q {
+    font-size: 30px;
+  }
+  .A {
+    font-size: 17px;
+  }
 }
 
 /* Media query for medium devices (tablets, 600px and up) */
