lots of mobile changes2

--- a/src/App.css
+++ b/src/App.css
@@ -172,15 +172,32 @@ h2 {
 
 @media only screen and (max-width: 600px) {
   /* Font size adjustment for small screens */
+  body {
+    overflow-x: hidden;
+  }
+  .h2-2 {
+    font-size: 55px;
+    line-height: 1.2;
+  }
+
   .page-title {
-    font-size: 60px;
+    font-size: 55px;
+    line-height: 1.2;
+    margin-bottom: 10px;
+  }
+  .page-title-2 {
+    font-size: 45px;
   }
   .container {
-    padding: 10px 80px 120px 80px;
+    padding: 10px 40px 40px 40px;
     min-height: 80.5vh;
     align-items: center;
     justify-content: center;
+    max-width: 100vw;
     width: 100vw;
+  }
+  .title-hr {
+    margin-bottom: 20px;
   }
 }
 
