--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -7,6 +7,7 @@ img {
 
 .banner {
   height: 92vh;
+  min-width: 100vw;
   width: 100vw;
   padding: 110px 180px;
   align-items: center;
@@ -54,26 +55,34 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+  }
   img {
     width: 100vw;
 
     overflow-x: hidden;
   }
   .banner {
-    padding: 30px 60px 50px 60px;
+    padding: 30px 50px 50px 50px;
     height: 68vh;
+    min-width: 100vw;
+    width: 100vw;
+    max-width: 100vw;
   }
   .banner-heading {
-    font-size: 40px;
-    max-width: 90vw;
+    text-align: center;
+    font-size: 38px;
+    max-width: 95vw;
+    line-height: 1.25;
   }
   .banner-heading-2 {
     font-size: 15px;
-    margin-top: 15px;
+    margin-top: 20px;
   }
   .learn-more {
-    height: 30px;
-    font-size: 12px;
+    height: 38px;
+    font-size: 15px;
     margin-top: 25px;
   }
 }
