--- a/src/components/CloudEdge.css
+++ b/src/components/CloudEdge.css
@@ -70,10 +70,14 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+    width: 100vw;
+  }
   .cloud-edge-container {
     position: relative;
     z-index: 100;
-    margin-top: -20vh;
+    margin-top: -10vh;
     width: 100vw;
     max-width: 100vw;
   }
