--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -97,7 +97,22 @@ button:hover {
 @media only screen and (max-width: 600px) {
   /* Insert mobile-specific styles here */
   .contact-form {
-    width: 80vw;
+    min-width: 80vw;
+    max-width: 80vw;
+  }
+  .contact-title {
+    font-size: 30px;
+  }
+  input,
+  textarea {
+    font-size: 15px;
+    padding: 4px;
+  }
+  .label {
+    font-size: 18px;
+  }
+  button {
+    padding: 6px 12px 8px 12px;
   }
 }
 
