--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,10 @@ body {
   padding: 0px;
 }
 
+ul::marker {
+  display: none;
+}
+
 #nav-item-1 {
   margin-right: 20px;
 }
@@ -24,15 +28,22 @@ body {
   width: 100vw;
 }
 
+.icon-cont-cont {
+  margin-left: 85px;
+  left: 0;
+}
+
 .icon-container {
-  margin-left: 0px;
+  margin-left: 50px;
+  justify-self: flex-start;
   cursor: pointer;
 
   display: flex;
   align-items: center;
 
-  padding: 1rem 1rem 0rem 0rem;
+  padding: 1rem 1rem 0rem 1rem;
   height: 100%;
+  width: 300px;
 }
 
 #icon {
@@ -47,7 +58,7 @@ body {
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat(1, auto);
   grid-gap: 15px;
   list-style: none;
   margin-right: 160px;
@@ -94,6 +105,12 @@ body {
 .fa-bars {
   color: #292929;
 }
+.fa-times {
+  font-size: 1.8rem;
+  color: #484848;
+  z-index: 100;
+  display: absolute;
+}
 
 .nav-links-mobile {
   display: none;
@@ -129,11 +146,14 @@ body {
   .nav-menu {
     display: flex;
     flex-direction: column;
+
     width: 100vw;
     height: 90vh;
     position: absolute;
+
+    opacity: 1;
+    left: -120vw;
     top: 80px;
-    opacity: 0;
     transition: all 0.5s ease;
 
     justify-content: flex-start;
@@ -151,22 +171,24 @@ body {
     margin-left: 0;
     color: white;
   }
-
+  .mobile-nav {
+    flex-direction: column;
+  }
   .nav-links {
+    display: flex;
+    flex-direction: column;
+
     text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-    display: block;
-    text-align: center;
+    justify-content: center;
     margin: 2rem auto;
+
+    padding: 5px 10px;
     border-radius: 4px;
-    width: 80%;
+    width: 70%;
     text-decoration: none;
     font-size: 1.5rem;
     background-color: transparent;
     color: #ffffff;
-    padding: 5px 10px;
   }
 
   .nav-item {
@@ -232,4 +254,18 @@ body {
     justify-content: end;
     justify-self: flex-end;
   }
+  .icon-cont-cont {
+    margin-left: 0px;
+    left: 0;
+    transform: translate(0%, -8%);
+  }
+  /* .icon-cont-cont {
+    margin-left: 0px;
+    padding: 1rem 1rem 0rem 0rem;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(0%, -8%);
+  } */
 }
