--- a/src/components/Testimonial.module.css
+++ b/src/components/Testimonial.module.css
@@ -154,7 +154,7 @@
     display: flex;
     flex-direction: column;
     background-color: rgb(246, 241, 239);
-    border-radius: 90px;
+    border-radius: 50px;
 
     min-width: 300px;
     max-width: 75%;
@@ -192,6 +192,10 @@
       0.1vw 5.9vw 0 -0.6vw rgb(246, 241, 239),
       2vw 6.5vw 0 -1vw rgb(246, 241, 239);
     transform: scaleX(-1); /* Counteract the flip effect */
+  }
+  .quotes-img {
+    width: 15px;
+    height: 12px;
   }
 
   .review-title {
