--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -133,6 +133,7 @@ ul::marker {
 @media screen and (max-width: 960px) {
   body {
     padding: 0px;
+    max-width: 100vw;
   }
 
   .navbar {
@@ -152,7 +153,7 @@ ul::marker {
     position: absolute;
 
     opacity: 1;
-    left: -120vw;
+    left: -150vw;
     top: 80px;
     transition: all 0.5s ease;
 
@@ -174,7 +175,8 @@ ul::marker {
   .mobile-nav {
     flex-direction: column;
   }
-  .nav-links {
+  .nav-links,
+  .nav-links-last {
     display: flex;
     flex-direction: column;
 
