--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -79,27 +79,29 @@
 @media only screen and (max-width: 600px) {
   /* Font size adjustment for small screens */
   .data-heading {
-    padding: 30px 30px 40px 30px;
+    padding: 30px 25px 40px 25px;
     margin-top: 70px;
-    font-size: 25px;
+    font-size: 28px;
     line-height: 1.35;
+    border-radius: 60px;
   }
   .data {
     margin-bottom: 0px;
   }
 
   .data-li {
-    font-size: 25px;
+    font-size: 22px;
     margin-bottom: 35px;
   }
   .data-container {
-    padding: 60px 0px 20px 0px;
+    padding: 50px 0px 30px 0px;
   }
 
   .card-image {
-    max-width: auto;
-    height: 180px;
+    max-width: 370px;
+    height: 200px;
     margin-bottom: 20px;
+    box-shadow: 0 0 14px rgba(138, 121, 162, 0.8);
   }
 }
 
