--- a/src/components/NewItems.css
+++ b/src/components/NewItems.css
@@ -87,6 +87,15 @@
     max-width: 250px;
     transform: scaleY(1);
   }
+  .margin-bottom-40 {
+    margin-bottom: 40px;
+  }
+  .margin-bottom-60 {
+    margin-bottom: 60px;
+  }
+  .margin-bottom-50 {
+    margin-bottom: 50px;
+  }
 }
 
 @media screen and (max-width: 960px) {
