--- a/src/components/SameDayReadings.css
+++ b/src/components/SameDayReadings.css
@@ -69,7 +69,7 @@ p {
   color: rgb(85, 85, 85);
 }
 
-.description-box {
+.sd-description-box {
   background-color: white;
   padding: 5px 4px 4px 4px;
   /* border: 2px solid rgb(198, 187, 198); */
@@ -78,6 +78,10 @@ p {
   max-width: 235px;
   min-width: 235px;
   margin-bottom: -50px;
+  transform: scaleY(0); /* Start with a vertical scale of 0 */
+  transform-origin: top; /* Set the transform origin to the top */
+  transition: opacity 0.3s ease, transform 0.3s ease; /* Adjust the duration as needed */
+  position: absolute;
 }
 
 .thumbnail-container {
@@ -92,19 +96,19 @@ p {
   flex-wrap: wrap;
 }
 
-.thumbnail-container > div:hover .description-box {
+.thumbnail-container > div:hover .sd-description-box {
   opacity: 1;
   transform: scaleY(1); /* Scale back to 100% height */
 }
 
 .thumbnail-container > div:hover,
-.thumbnail-container > div:hover .description-box {
+.thumbnail-container > div:hover .sd-description-box {
   transition: opacity 0.3s ease, transform 0.3s ease, box-shadow 0.4s ease;
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.7);
 }
 
 .thumbnail-container2 > div:hover,
-.thumbnail-container2 > div:hover .description-box {
+.thumbnail-container2 > div:hover .sd-description-box {
   transition: opacity 0.3s ease, transform 0.3s ease, box-shadow 0.4s ease;
   box-shadow: 0px 0px 25px rgba(44, 44, 44, 0.9);
 }
@@ -129,7 +133,7 @@ p {
   border-radius: 5px;
 }
 
-.thumbnail-container2 > div:hover .description-box {
+.thumbnail-container2 > div:hover .sd-description-box {
   opacity: 1;
   transform: scaleY(1); /* Scale back to 100% height */
 }
@@ -144,4 +148,18 @@ p {
   margin-left: -100px;
   font-size: 100px;
   word-wrap: nowrap;
+}
+@media only screen and (max-width: 600px) {
+  .sd-description-box {
+    min-width: 250px;
+    max-width: 250px;
+    transform: scaleY(1);
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 960px) {
+  .sd-description-box {
+    min-width: 250px !important;
+    max-width: 200px !important;
+  }
 }
