--- a/src/pages/OracleDecks.css
+++ b/src/pages/OracleDecks.css
@@ -103,6 +103,39 @@ p {
   font-size: 35px;
   margin-bottom: 2px;
 }
+.oc-description-box {
+  background-color: white;
+  padding: 5px 4px 4px 4px;
+  /* border: 2px solid rgb(198, 187, 198); */
+  border-top: 0px;
+  margin-top: -3px;
+  max-width: 235px;
+  min-width: 235px;
+  margin-bottom: -50px;
+  transform: scaleY(0); /* Start with a vertical scale of 0 */
+  transform-origin: top; /* Set the transform origin to the top */
+  transition: opacity 0.3s ease, transform 0.3s ease; /* Adjust the duration as needed */
+  position: absolute;
+}
+
+.thumbnail-container3 > div {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+}
+.thumbnail-container3 > div {
+  box-shadow: 0 0 10px rgb(75, 75, 75, 0.7);
+  border-radius: 5px;
+}
+
+.thumbnail-container3 > div:hover,
+.thumbnail-container3 > div:hover .oc-description-box {
+  transition: opacity 0.3s ease, transform 0.3s ease, box-shadow 0.4s ease;
+  box-shadow: 0px 0px 25px rgba(44, 44, 44, 0.9);
+}
+
+.thumbnail-container3 > div:hover .oc-description-box {
+  opacity: 1;
+  transform: scaleY(1); /* Scale back to 100% height */
+}
 
 @media only screen and (max-width: 600px) {
   /* Font size adjustment for small screens */
@@ -121,5 +154,16 @@ p {
   }
   .explanation-font {
     font-size: 22px;
+  }
+  .oc-description-box {
+    min-width: 250px;
+    max-width: 250px;
+    transform: scaleY(1);
+  }
+}
+@media only screen and (min-width: 601px) and (max-width: 960px) {
+  .oc-description-box {
+    min-width: 250px !important;
+    max-width: 250px !important;
   }
 }
