--- a/src/pages/TarotReadings.css
+++ b/src/pages/TarotReadings.css
@@ -131,6 +131,21 @@ p {
   flex-wrap: wrap;
 }
 
+.description-box {
+  background-color: white;
+  padding: 5px 4px 4px 4px;
+  /* border: 2px solid rgb(198, 187, 198); */
+  border-top: 0px;
+  margin-top: -3px;
+  max-width: 235px;
+  min-width: 235px;
+  margin-bottom: -50px;
+  transform: scaleY(0); /* Start with a vertical scale of 0 */
+  transform-origin: top; /* Set the transform origin to the top */
+  transition: opacity 0.3s ease, transform 0.3s ease; /* Adjust the duration as needed */
+  position: absolute;
+}
+
 .thumbnail-container > div {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
@@ -154,4 +169,19 @@ p {
   margin-left: -100px;
   font-size: 100px;
   word-wrap: nowrap;
+}
+
+@media only screen and (max-width: 600px) {
+  .description-box {
+    min-width: 250px;
+    max-width: 250px;
+    transform: scaleY(1);
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 960px) {
+  .description-box {
+    min-width: 250px !important;
+    max-width: 200px !important;
+  }
 }
