--- a/src/components/SameDayReadings.css
+++ b/src/components/SameDayReadings.css
@@ -156,6 +156,25 @@ p {
     transform: scaleY(1);
   }
 }
+@media only screen and (max-width: 600px) {
+  .new-description-box {
+    min-width: 250px;
+    max-width: 250px;
+    transform: scaleY(1);
+  }
+  .margin-bottom-40 {
+    margin-bottom: 40px;
+  }
+  .margin-bottom-60 {
+    margin-bottom: 60px;
+  }
+  .margin-bottom-110 {
+    margin-bottom: 110px;
+  }
+  .margin-bottom-130 {
+    margin-bottom: 130px;
+  }
+}
 
 @media only screen and (min-width: 601px) and (max-width: 960px) {
   .sd-description-box {
