--- a/src/pages/OracleDecks.css
+++ b/src/pages/OracleDecks.css
@@ -160,6 +160,21 @@ p {
     max-width: 250px;
     transform: scaleY(1);
   }
+  .margin-bottom-40 {
+    margin-bottom: 40px;
+  }
+  .margin-bottom-60 {
+    margin-bottom: 60px;
+  }
+  .margin-bottom-90 {
+    margin-bottom: 90px;
+  }
+  .margin-bottom-110 {
+    margin-bottom: 110px;
+  }
+  .margin-bottom-130 {
+    margin-bottom: 130px;
+  }
 }
 @media only screen and (min-width: 601px) and (max-width: 960px) {
   .oc-description-box {
