--- a/src/pages/OracleDecks.css
+++ b/src/pages/OracleDecks.css
@@ -94,6 +94,7 @@ p {
   font-size: 24px;
   font-family: "Cormorant", "serif";
   font-weight: 400;
+  text-decoration: underline;
 }
 
 .question {
